# rules_helm

./: WORKSPACE  workspace_status.sh
examples/helloworld/: .helmignore  BUILD.bazel  Chart.yaml  values.yaml
examples/helloworld/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
examples/other/: BUILD.bazel  Chart.yaml  values.yaml
examples/other/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
helm/: BUILD.bazel  charts.bzl  lint.sh.tpl  push.sh.tpl  repositories.bzl  s3-push.sh.tpl
tools/: bazel.rc
