load("@com_github_tnarg_rules_helm//helm:charts.bzl", "helm_package", "helm_s3_push")

helm_package(
    name = "chart",
    chartname = "helloworld",
    version = "0.1.1-alpha+gitsha1",
    srcs = glob(["**/*"]),
)

helm_s3_push(
    name = "s3_push",
    chart = ":chart",
    repo = "s3://my-bucket/my-helm-charts/",
    aws_region = "us-east-1",
)

