load("@com_tnarg_rules_helm//helm:charts.bzl", "helm_chart", "helm_push")

helm_chart(
    name = "helloworld",
    version = "0.1.1-alpha+git${GIT_STATUS}",
    srcs = [
        ".helmignore",
        "Chart.yaml",
        "templates/NOTES.txt",
        "templates/_helpers.tpl",
        "templates/deployment.yaml",
        "templates/ingress.yaml",
        "templates/service.yaml",
        "values.yaml",
    ],
    repository = "http://localhost:8080/foo/",
    visibility = ["//visibility:public"],
)

# chartmuseum
helm_push(
    name = "push",
    chart = ":chart",
    contextpath = "/foo/",
)
